# uncertainty_flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  benchmark_results.csv  pyproject.toml
.github/workflows/: ci.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
data/: README.md  exchange_rate.parquet  weather.parquet
docs/: README.md  technical_roadmap.md
docs/api/: spec.md
docs/architecture/: overview.md
docs/archive/: README.md
docs/benchmarks/: README.md  comprehensive_v2_all.json  comprehensive_v2_electricity.json  comprehensive_v2_weather.json
docs/guides/: benchmarking.md  calibration.md  charting.md  design.md  distribution-approach.md  models.md
docs/plans/: 2026-03-20-final-summary.md  2026-03-20-implementation-progress.md  20260401-v6-plus-design.md  20260411-phase4-runtime-handoff.md
docs/project/: changelog.md  contributing.md  roadmap.md
results/: benchmark_report.md  comparison_table.csv  comprehensive_v2_electricity.csv  comprehensive_v2_exchange_rate.csv  comprehensive_v2_exchange_rate.json  comprehensive_v2_weather.csv
scripts/: README.md  comprehensive_benchmark.py  generate_report.py  ingest_datasets.py  trial_benchmark.py
tests/: conftest.py  test_base_quantile.py  test_config.py  test_exceptions.py  test_package_integration.py  test_utils.py
tests/analysis/: __init__.py  test_leverage.py
tests/bayesian/: test_numpyro_model.py
tests/calibration/: test_residual_analysis.py  test_shap.py
tests/causal/: test_estimator.py
tests/core/: test_base.py  test_distribution.py  test_persistence.py  test_types.py
tests/counterfactual/: __init__.py  test_counterfactual.py
tests/decomposition/: __init__.py  test_ensemble.py
tests/metrics/: test_coverage.py  test_pinball.py  test_winkler.py
tests/models/: test_deep_quantile.py  test_deep_quantile_torch.py  test_quantile_forest.py  test_transformer.py
tests/multimodal/: test_aggregator.py
tests/multivariate/: test_copula.py
tests/risk/: __init__.py  test_control.py  test_risk_functions.py
tests/utils/: test_calibration_report.py  test_polars_bridge.py  test_split.py
tests/viz/: __init__.py  test_dashboard.py
tests/wrappers/: test_conformal.py  test_conformal_ts.py
uncertainty_flow/: __init__.py  cli.py
uncertainty_flow/analysis/: __init__.py  leverage.py
uncertainty_flow/bayesian/: __init__.py  numpyro_model.py
uncertainty_flow/benchmarking/: __init__.py  datasets.py  runner.py  tuning.py
uncertainty_flow/calibration/: __init__.py  report.py  residual_analysis.py  shap_values.py
uncertainty_flow/causal/: __init__.py  estimator.py
uncertainty_flow/core/: __init__.py  _persistence.py  base.py  config.py  distribution.py  types.py
uncertainty_flow/counterfactual/: __init__.py  explainer.py  search.py
uncertainty_flow/decomposition/: __init__.py  ensemble.py
uncertainty_flow/metrics/: __init__.py  coverage.py  pinball.py  winkler.py
uncertainty_flow/models/: __init__.py  base_quantile.py  deep_quantile.py  deep_quantile_torch.py  quantile_forest.py  transformer_forecaster.py
uncertainty_flow/multimodal/: __init__.py  aggregator.py
(+18 files in other folders)
