[project]
name = "uncertainty-flow"
version = "0.1.0"
description = "Probabilistic forecasting and uncertainty quantification"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=0.20.0",
    "numpy>=1.24.0",
    "pyarrow>=23.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "matplotlib>=3.7.0",
]
torch = [
    "torch>=2.0.0",
]
transformers = [
    "chronos-forecasting>=2.0",
]
shap = [
    "shap>=0.44.0",
]
bench = [
    "datasets>=2.0.0",
]
numpyro = [
    "numpyro>=0.14.0",
    "jax>=0.4.0",
]

[project.scripts]
uncertainty-flow = "uncertainty_flow.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uncertainty_flow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast, focused tests for a single module or behavior",
    "integration: tests covering multi-module workflows or heavier model interactions",
    "slow: expensive tests that are useful to exclude during quick local iteration",
    "optional: tests that rely on optional dependency stacks or non-core integrations",
]
filterwarnings = [
    "ignore:Stochastic Optimizer",
    "ignore:Degrees of freedom <= 0 for slice:RuntimeWarning",
    "ignore:divide by zero encountered in divide:RuntimeWarning",
    "ignore:invalid value encountered in multiply:RuntimeWarning",
    "ignore:invalid value encountered in log:RuntimeWarning",
    "ignore:An input array is constant",
    "ignore::uncertainty_flow.utils.exceptions.UncertaintyFlowWarning",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
